--- a/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
@@ -43,7 +43,7 @@
 					<td>ff7dd</td>
 					<td>丽水某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png">
+<!-- 					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"> -->
 					</td>
 					<td>我们培训中心师资力量十分强大，可以帮助学生很好地提升自己的学习水平。</td>
 					<td>丽水</td>
@@ -58,7 +58,7 @@
 					<td>c6a35</td>
 					<td>金华某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png">
+					<!-- <img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"> -->
 					</td>
 					<td>我们培训中心历年，都有着许多人气，培育出许多优秀的大学生。
 					</td>
@@ -74,7 +74,7 @@
 					<td>dec09</td>
 					<td>衡州某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg">
+					<!-- <img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"> -->
 					</td>
 					<td></td>
 					<td>衡州</td>
@@ -89,7 +89,7 @@
 					<td>eefd7</td>
 					<td>台州某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png">
+					<!-- <img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"> -->
 					</td>
 					<td>本培训中心承诺，一定尽自己最大的努力帮助学生成长。</td>
 					<td>台州</td>
@@ -104,7 +104,7 @@
 					<td>6ec32</td>
 					<td>舟山某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg">
+					<!-- <img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"> -->
 					</td>
 					<td></td>
 					<td>舟山</td>
