--- a/代码类/WEB管理端前端/运营管理平台/www/school_list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/school_list.html
@@ -42,7 +42,7 @@
 					<th width="25"><input type="checkbox" name="" value=""></th>
 					<th width="80">学校代码</th>
 					<th width="80">院校名称</th>
-					<th width="80">校徽</th>
+					<!-- <th width="80">校徽</th> -->
 					<th width="80">院校介绍</th>
 					<th width="80">所在城市</th>
 					<th width="80">所在省份</th>
@@ -108,7 +108,7 @@ if(schoolsite[i]){
   x+="<tr>"+"<td><input type='"+"checkbox'/>"+"</td>"+
      "<td>" +schoolsite[i].id+ "</td>"+
      "<td>"+schoolsite[i].name+"</td>"+
-     "<td><img src='"+schoolsite[i].icon+"'/></td>"+
+     
      "<td>"+schoolsite[i].introduce+"</td>"+
      "<td>"+schoolsite[i].city+"</td>"+
      "<td>"+schoolsite[i].province+"</td>"+
