--- a/代码类/WEB管理端前端/运营管理平台/www/banner-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/banner-list.html
@@ -30,19 +30,19 @@
 }  
 </style>
 
-<title>品牌管理</title>
+<title>Banner管理</title>
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 轮播图管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	<button class="btn btn-primary radius" type="submit">
-	<a style="color:#ffffff;" href="pmanager-ad.html">添加管理员</a></button>
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加Banner</a></button>
 	<div class="mt-20">
 		<table id="mytable" class="table table-border table-bordered table-bg table-sort">
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">院校代码</th>
+					<th width="80">BannerId</th>
 					<th width="80">图片</th>
 					<th width="80">广告类别</th>
 					<th width="80">链接</th>
@@ -50,42 +50,40 @@
 				</tr>
 			</thead>
 			<tbody>
+				
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
 					<td>1</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
-					<td>商业广告</td>
-					<td><a href="www.baidu.com"><h3>东鹏</h3></a></td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td><img width="120" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=androidkaifa.png"></td>
+					<td>课程广告</td>
+					<td>3300</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>1</td>
-					<td><img src="temp/brand/shengxiang.jpg"></td>
-					<td>商业广告</td>
-					<td><a href="www.baidu.com"><h3>盛翔</h3></a></td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td>2</td>
+					<td><img width="120" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=570360ca00010eeb06000338-240-135.jpg"></td>
+					<td>课程广告</td>
+					<td>870</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>1</td>
-					<td><img src="temp/brand/ambio.jpg"></td>
-					<td>商业广告</td>
-					<td><a href="www.baidu.com"><h3>Ambio</h3></a></td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td>3</td>
+					<td><img width="120" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=javachenxusheji.png"></td>
+					<td>课程广告</td>
+					<td>3298</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>1</td>
-					<td><img width="210" src="http://img3.imgtn.bdimg.com/it/u=320223963,591479636&fm=214&gp=0.jpg"></td>
-					<td>商业广告</td>
-					<td><a href="www.baidu.com"><h3>百度</h3></a></td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td>4</td>
+					<td><img width="120" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=springmvc.png"></td>
+					<td>课程广告</td>
+					<td>3299</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
+				
 			</tbody>
 		</table>
 	</div>
