--- a/代码类/WEB管理端前端/运营管理平台/www/sensitive-words.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/sensitive-words.html
@@ -30,13 +30,13 @@
 }  
 </style>
 
-<title>品牌管理</title>
+<title>敏感词管理</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 轮播图管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 敏感词管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	<button class="btn btn-primary radius" type="submit">
-	<a style="color:#ffffff;" href="pmanager-ad.html">添加管理员</a></button>
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加敏感词</a></button>
 	<div class="mt-20">
 		<table id="mytable" class="table table-border table-bordered table-bg table-sort">
 			<thead>
@@ -49,22 +49,25 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>01</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td>SB</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>02</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td>刷单</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>05</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td>代考</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>替考</td>
+					<td class="f-14 product-brand-manage"> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				
 			</tbody>
 		</table>
 	</div>
