修改了两个管理端的展示内容前端代码

--- a/代码类/WEB管理端前端/教务管理端/www/course-list.html
+++ b/代码类/WEB管理端前端/教务管理端/www/course-list.html
@@ -73,7 +73,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57035f580001a91806000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>50</th>
 					<th>25.26</th>
@@ -98,7 +98,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57035f110001a57906000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>60</th>
 					<th>30</th>
@@ -123,7 +123,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=53fed63700018a9306000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>55</th>
 					<th>25</th>
@@ -148,7 +148,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=544f0d9500017d6306000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>50</th>
 					<th>30</th>
@@ -173,7 +173,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5460558c0001f92506000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>50</th>
 					<th>25.56</th>
@@ -198,7 +198,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5704cf8c00012c9006000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>50</th>
 					<th>25.26</th>
@@ -223,7 +223,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=570779200001fde006000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>50</th>
 					<th>36</th>
@@ -248,7 +248,7 @@
 					<th>无</th>
 					<th>150</th>
 					<th><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=54b5e5af00010ec406000338-240-135.jpg"></th>
-					<th>直播课</th>
+					<th>公开课</th>
 					<th>8</th>
 					<th>50</th>
 					<th>25.26</th>
