--- a/代码类/WEB管理端前端/教务管理端/www/sensitive_word.html
+++ b/代码类/WEB管理端前端/教务管理端/www/sensitive_word.html
@@ -32,7 +32,7 @@
 <title>查看信息</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 交流监管 <span class="c-gray en">&gt;</span> 敏感词设置 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <button class="btn btn-primary radius" type="submit">
 	<a style="color:#ffffff;" href="pmanager-ad.html">添加敏感词</a></button>
 	<div class="mt-20">
