--- a/代码类/WEB管理端前端/教务管理端/www/index.html
+++ b/代码类/WEB管理端前端/教务管理端/www/index.html
@@ -30,7 +30,7 @@
 			<div class="navbar navbar-fixed-top">
 				<div class="container-fluid cl">
 					<a class="logo navbar-logo f-l mr-10 hidden-xs" href="#">
-						<img src="img/logo.png">
+						<img src="img/logo.png" width="40">
 					</a>
 					<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 
