前端首页，直播间

--- a/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -51,9 +51,9 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>杭州信息大学入驻</td>
-					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
-					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>杭州某学校入驻平台</td>
+					<td></td>
+					<td>0</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
@@ -61,9 +61,9 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>衡州信息小学入驻</td>
-					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"></td>
-					<td>有机构需要入驻本平台，目前双方已经确相关细节</td>
+					<td>丽水某机构需要入驻</td>
+					<td></td>
+					<td>0</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
@@ -71,9 +71,9 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>台州测试学校入驻</td>
-					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
-					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>金华某机构需要入驻</td>
+					<td></td>
+					<td>0</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
@@ -81,9 +81,9 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>衡州信息学院入驻</td>
-					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57de39800001bc6f06000338-240-135.jpg"></td>
-					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>衡州某培训机构需要入驻平台</td>
+					<td></td>
+					<td>0</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
@@ -91,9 +91,9 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>温州信息小学入驻</td>
-					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5800999f0001ac1106000338-240-135.jpg"></td>
-					<td>有小学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>杭州信息大学需要入驻</td>
+					<td></td>
+					<td>0</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
@@ -101,9 +101,9 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>衡州信息学院</td>
-					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
-					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>衡州信息小学需要入驻</td>
+					<td></td>
+					<td>0</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
