--- a/代码类/WEB管理端前端/运营管理平台/www/sensitive-words.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/sensitive-words.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -36,11 +36,9 @@
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 敏感词管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	<button class="btn btn-primary radius" type="submit">
-<<<<<<< HEAD
-	<a style="color:#ffffff;" href="pmanager-ad.html">添加轮播图</a></button>
-=======
+
 	<a style="color:#ffffff;" href="pmanager-ad.html">添加敏感词</a></button>
->>>>>>> 1cb4a81f794ad0ea80e430023d50934d3fc512fa
+
 	<div class="mt-20">
 		<table id="mytable" class="table table-border table-bordered table-bg table-sort">
 			<thead>
