--- a/代码类/WEB管理端前端/运营管理平台/www/pcourse_list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/pcourse_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -33,11 +33,8 @@
 <title>品牌管理</title>
 </head>
 <body>
-<<<<<<< HEAD
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 展示课程 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-=======
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 课程管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
->>>>>>> 1cb4a81f794ad0ea80e430023d50934d3fc512fa
+
 <div class="page-container">
 	<button class="btn btn-primary radius" type="submit">
 	<a style="color:#ffffff;" href="pmanager-ad.html">添加课程</a></button>	<div class="mt-20">
