--- a/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_A.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_A.html
@@ -15,7 +15,7 @@
 			
 			.clearfix li div {
 				float: left;
-				text-align: center;
+				text-align:center;
 			}
 			
 			/*div {
@@ -99,8 +99,8 @@
 							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1165.html">安徽工业大学</a></h5>
 						</div>
 					</li>
-				</ul>
-				<ul class="clearfix" type="none">
+					</ul>
+					<ul class="clearfix" type="none">
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0154Y40-1U493.jpg" width="48" height="48" alt="安徽理工大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
@@ -133,78 +133,56 @@
 				<ul class="clearfix" type="none">
 					<li>
 						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州电子科技大学</a></h5>
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z016042B0-163195.jpg" width="48" height="48" alt="安徽中医药大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1144.html">安徽中医药大学</a></h5>
+						</div>
+
+					</li>
+					<li>
+						<div class="hd" style="float:left;width:150px;">
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5407d4d64f400.jpg" width="48" height="48" alt="安徽师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1173.html">安徽师范大学</a></h5>
+						</div>
+
+					</li>
+					<li>
+						<div class="hd" style="float:left;width:150px;">
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/542a59304bdbd.jpg" width="48" height="48" alt="安徽财经大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1202.html">安徽财经大学</a></h5>
+						</div>
+
+					</li>
+					<li>
+						<div class="hd" style="float:left;width:150px;">
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541025bb49b6c.jpg" width="48" height="48" alt="安徽职业技术学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1199.html">安徽职业技术学院</a></h5>
+						</div>
+
+					</li>
+					</ul>
+					<ul class="clearfix" type="none">
+					<li>
+						<div class="hd" style="float:left;width:150px;">
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z020359530-1N431.jpg" width="48" height="48" alt="阿克苏职业技术学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-3070.html">阿克苏职业技术学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州师范大学</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;height:61px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州电子科技大学信息工程学院</a></h5>
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z024L2U0-122522.png" width="48" height="48" alt="澳门理工学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2416.html">澳门理工学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">丽水学院</a></h5>
-						</div>
-					</li>
-				</ul>
-				<ul class="clearfix" type="none">
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53477d0c695ec.jpg" width="48" height="48" alt="清华大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2216.html">清华大学</a></h5>
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0245P910-1D55.png" width="48" height="48" alt="澳门大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2414.html">澳门大学</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/54080f6a54180.jpg" width="48" height="48" alt="衢州学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2636.html">衢州学院</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53476015977d2.jpg" width="48" height="48" alt="外交学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-980.html">外交学院</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53477d80e9a67.jpg" width="48" height="48" alt="浙江大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2137.html">浙江大学</a></h5>
-						</div>
-					</li>
-				</ul>
-				<ul class="clearfix" type="none">
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53479e05164ee.jpg" width="48" height="48" alt="浙江工业大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2140.html">浙江工业大学</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a0081d3ef.jpg" width="48" height="48" alt="浙江理工大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2161.html">浙江理工大学</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z015I1250-1Q131.jpg" width="48" height="48" alt="浙江农林大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2128.html">浙江农林大学</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541fc63438d5c.jpg" width="48" height="48" alt="浙江工商职业技术学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2146.html">浙江工商职业技术学院</a></h5>
+							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z024I9E0-D933.jpg" width="48" height="48" alt="澳门旅游学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2415.html">澳门旅游学院</a></h5>
 						</div>
 					</li>
 				</ul>
