WEB前端部分修改

--- a/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_A.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_A.html
@@ -49,28 +49,28 @@
 				<a href="../school_list.html">全部</a>&nbsp;&nbsp;:
 			</div>
 			<div id="keywordPage" style="margin-left:20px;margin-top:10px;">
-				<span><a href="school_l/school_list_A.html">A</a></span>
-				<span><a href="school_l/school_list_B.html">B</a></span>
-				<span><a href="school_l/school_list_C.html">C</a></span>
-				<span><a href="school_l/school_list_D.html">D</a></span>
-				<span><a href="school_l/school_list_E.html">E</a></span>
-				<span><a href="school_l/school_list_F.html">F</a></span>
-				<span><a href="school_l/school_list_G.html">G</a></span>
-				<span><a href="school_l/school_list_H.html">H</a></span>
-				<span><a href="school_l/school_list_J.html">J</a></span>
-				<span><a href="school_l/school_list_K.html">K</a></span>
-				<span><a href="school_l/school_list_L.html">L</a></span>
-				<span><a href="school_l/school_list_M.html">M</a></span>
-				<span><a href="school_l/school_list_N.html">N</a></span>
-				<span><a href="school_l/school_list_P.html">P</a></span>
-				<span><a href="school_l/school_list_Q.html">Q</a></span>
-				<span><a href="school_l/school_list_R.html">R</a></span>
-				<span><a href="school_l/school_list_S.html">S</a></span>
-				<span><a href="school_l/school_list_T.html">T</a></span>
-				<span><a href="school_l/school_list_W.html">W</a></span>
-				<span><a href="school_l/school_list_X.html">X</a></span>
-				<span><a href="school_l/school_list_Y.html">Y</a></span>
-				<span><a href="school_l/school_list_Z.html">Z</a></span>
+				<span><a href="school_list_A.html">A</a></span>
+				<span><a href="school_list_B.html">B</a></span>
+				<span><a href="school_list_C.html">C</a></span>
+				<span><a href="school_list_D.html">D</a></span>
+				<span><a href="school_list_E.html">E</a></span>
+				<span><a href="school_list_F.html">F</a></span>
+				<span><a href="school_list_G.html">G</a></span>
+				<span><a href="school_list_H.html">H</a></span>
+				<span><a href="school_list_J.html">J</a></span>
+				<span><a href="school_list_K.html">K</a></span>
+				<span><a href="school_list_L.html">L</a></span>
+				<span><a href="school_list_M.html">M</a></span>
+				<span><a href="school_list_N.html">N</a></span>
+				<span><a href="school_list_P.html">P</a></span>
+				<span><a href="school_list_Q.html">Q</a></span>
+				<span><a href="school_list_R.html">R</a></span>
+				<span><a href="school_list_S.html">S</a></span>
+				<span><a href="school_list_T.html">T</a></span>
+				<span><a href="school_list_W.html">W</a></span>
+				<span><a href="school_list_X.html">X</a></span>
+				<span><a href="school_list_Y.html">Y</a></span>
+				<span><a href="school_list_Z.html">Z</a></span>
 			</div>
 
 			<div class="schoolList" style="width:100%;height:400px;">
