--- a/代码类/WEB用户前端/WEB学生前端/www/live_room/live_room1.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/live_room/live_room1.html
@@ -149,7 +149,7 @@
 					<input type="text" placeholder="" style="border: 1px solid #DBDBDB;border-radius:5px;height:20px;" />
 					<input type="submit" style="border: 1px solid #DBDBDB;border-radius:1px;height:20px;" />
 					<img style="width:38px;margin-left:60%;" src="../img/toux.png" />
-					<a href="index.html" style="color:#FFFFFF;float:right;margin-right:70px;">退出</a>
+					<a href="index.html" style="color:#FFFFFF;float:right;margin-right:50px;">退出</a>
 				</div>
 			</div>
 			<div id="top" style="width:67%;">
@@ -206,21 +206,21 @@
             	时间：2018-04-15
             	描述：底部
             -->
-			<div id="bottom" style="width:100%;height:200px;margin-top:180px;">
-				<hr style="height:1px;border:none;border-top:1px solid #555555;" />
+			<div id="bottom" style="background-color:#000000;width:100%;height:200px;margin-top:180px;">
+				
 				<div id="bottom_top">
 					<div style="padding-top:20px;margin-left:5%;">
-						<a href="#">关于我们</a>&nbsp;|&nbsp;
-						<a href="#">使用帮助</a>&nbsp;|&nbsp;
-						<a href="#">加入我们</a>&nbsp;|&nbsp;
-						<a href="#">问题反馈</a>&nbsp;
+						<a style="color:#FFFFFF;" href="#">关于我们</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">使用帮助</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">加入我们</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">问题反馈</a>&nbsp;
 						<br />
 						<br />
 						<br />
 						<h6>Copyright &copy;云智教育2018</h6>
 						<h6>浙ICP备17047611号-1</h6>
 					</div>
-					<div id="QR_Code" style="margin-left:36%;">
+					<div id="QR_Code" style="margin-left:36%;margin-top:20px;">
 						<div style="text-align:center;margin-right:10px;">
 							<img style="width:120px;height:120px;" src="img/APP_Student.png" />
 							<h5><b>学生APP</b></h5>
