--- a/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_H.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_H.html
@@ -49,30 +49,29 @@
 				<a href="../school_list.html">全部</a>&nbsp;&nbsp;:
 			</div>
 			<div id="keywordPage" style="margin-left:20px;margin-top:10px;">
-				<span><a href="school_l/school_list_A.html">A</a></span>
-				<span><a href="school_l/school_list_B.html">B</a></span>
-				<span><a href="school_l/school_list_C.html">C</a></span>
-				<span><a href="school_l/school_list_D.html">D</a></span>
-				<span><a href="school_l/school_list_E.html">E</a></span>
-				<span><a href="school_l/school_list_F.html">F</a></span>
-				<span><a href="school_l/school_list_G.html">G</a></span>
-				<span><a href="school_l/school_list_H.html">H</a></span>
-				<span><a href="school_l/school_list_J.html">J</a></span>
-				<span><a href="school_l/school_list_K.html">K</a></span>
-				<span><a href="school_l/school_list_L.html">L</a></span>
-				<span><a href="school_l/school_list_M.html">M</a></span>
-				<span><a href="school_l/school_list_N.html">N</a></span>
-				<span><a href="school_l/school_list_P.html">P</a></span>
-				<span><a href="school_l/school_list_Q.html">Q</a></span>
-				<span><a href="school_l/school_list_R.html">R</a></span>
-				<span><a href="school_l/school_list_S.html">S</a></span>
-				<span><a href="school_l/school_list_T.html">T</a></span>
-				<span><a href="school_l/school_list_W.html">W</a></span>
-				<span><a href="school_l/school_list_X.html">X</a></span>
-				<span><a href="school_l/school_list_Y.html">Y</a></span>
-				<span><a href="school_l/school_list_Z.html">Z</a></span>
+				<span><a href="school_list_A.html">A</a></span>
+				<span><a href="school_list_B.html">B</a></span>
+				<span><a href="school_list_C.html">C</a></span>
+				<span><a href="school_list_D.html">D</a></span>
+				<span><a href="school_list_E.html">E</a></span>
+				<span><a href="school_list_F.html">F</a></span>
+				<span><a href="school_list_G.html">G</a></span>
+				<span><a href="school_list_H.html">H</a></span>
+				<span><a href="school_list_J.html">J</a></span>
+				<span><a href="school_list_K.html">K</a></span>
+				<span><a href="school_list_L.html">L</a></span>
+				<span><a href="school_list_M.html">M</a></span>
+				<span><a href="school_list_N.html">N</a></span>
+				<span><a href="school_list_P.html">P</a></span>
+				<span><a href="school_list_Q.html">Q</a></span>
+				<span><a href="school_list_R.html">R</a></span>
+				<span><a href="school_list_S.html">S</a></span>
+				<span><a href="school_list_T.html">T</a></span>
+				<span><a href="school_list_W.html">W</a></span>
+				<span><a href="school_list_X.html">X</a></span>
+				<span><a href="school_list_Y.html">Y</a></span>
+				<span><a href="school_list_Z.html">Z</a></span>
 			</div>
-
 			<div class="schoolList" style="width:100%;height:400px;">
 				<ul class="clearfix" type="none">
 					<li>
@@ -104,25 +103,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州电子科技大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">湖州师范学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州师范大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州职业技术学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州电子科技大学信息工程学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">湖州职业技术学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">丽水学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">杭州科技职业技术学院</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -130,25 +129,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州电子科技大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州万向职业技术学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州师范大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">合肥工业大学</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州电子科技大学信息工程学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">淮北师范大学</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">丽水学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">黄山学院</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -156,25 +155,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州电子科技大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">淮南师范学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州师范大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">淮南师范学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州电子科技大学信息工程学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">淮南联合大学</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">丽水学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">合肥职业技术学院</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -182,25 +181,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州电子科技大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">淮北师范大学信息学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州师范大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">合肥师范学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州电子科技大学信息工程学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">合肥共达职业技术学院</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">丽水学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">徽商职业学院</a></h5>
 						</div>
 					</li>
 				</ul>
