--- a/代码类/WEB用户前端/WEB学生前端/www/schools/school_1.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/schools/school_1.html
@@ -333,21 +333,21 @@
             	时间：2018-04-14
             	描述：底部
             -->
-			<div id="bottom" style="width:100%;height:200px;margin-top:30px;">
-
+			<div id="bottom" style="background-color:#000000;width:100%;height:200px;margin-top:180px;">
+				
 				<div id="bottom_top">
 					<div style="padding-top:20px;margin-left:5%;">
-						<a href="#">关于我们</a>&nbsp;|&nbsp;
-						<a href="#">使用帮助</a>&nbsp;|&nbsp;
-						<a href="#">加入我们</a>&nbsp;|&nbsp;
-						<a href="#">问题反馈</a>&nbsp;
+						<a style="color:#FFFFFF;" href="#">关于我们</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">使用帮助</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">加入我们</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">问题反馈</a>&nbsp;
 						<br />
 						<br />
 						<br />
 						<h6>Copyright &copy;云智教育2018</h6>
 						<h6>浙ICP备17047611号-1</h6>
 					</div>
-					<div id="QR_Code" style="margin-left:36%;">
+					<div id="QR_Code" style="margin-left:36%;margin-top:20px;">
 						<div style="text-align:center;margin-right:10px;">
 							<img style="width:120px;height:120px;" src="../img/APP_Student.png" />
 							<h5><b>学生APP</b></h5>
